--- a/contact.html
+++ b/contact.html
@@ -8,23 +8,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>CryptoHunter  <button id="connect-wallet">  <img class="meta" src="icons/meta.png" alt="icons"></button></h1>
-        <nav>
-          <a href="index.html">Home</a>
-          <a href="winners.html">Winners</a>
-          <a href="rules.html">Rules</a>
-          <a href="contact.html">Contact</a>
-          <a href="video.html">videos</a>
-         
-        </nav>
-        <div class="social-icons">
-            <a href="#"><img src="icons/y.png" alt="YouTube"></a>
-            <a href="#"><img src="icons/f.png" alt="Instagram"></a>
-            <a class="insta" href="#"><img src="icons/i.png" alt="Facebook"></a>
-            <a href="#"><img src="icons/x.png" alt="Twitter"></a>
-        </div>
-    </header>
+   <!-- Header -->
+   <!-- Header -->
+   <header>
+    <h1>Try-To-Win  <a href="#" onclick="donateWithMetaMask()" class="donation-button">
+      <img src="icons/meta.png" alt="Donate with MetaMask" class="metamask-icon">
+  </a>
+  
+  </h1>
+  <nav>
+    <a href="index.html">🏠 Home</a>
+    <a href="winners.html">🏆 Winners</a>
+    <a href="rules.html">📜 Rules</a>
+    <a href="contact.html">📞 Contact</a>
+    <a href="About.html">🚀 About</a>
+</nav>
+
+    <div class="social-icons">
+        <a href="#"><img src="icons/y.png" alt="YouTube"></a>
+        <a href="#"><img src="icons/f.png" alt="Instagram"></a>
+        <a class="insta" href="#"><img src="icons/i.png" alt="Facebook"></a>
+        <a href="#"><img src="icons/x.png" alt="Twitter"></a>
+    </div>
+</header>
 
     <section id="contact">
         <h2>Contact Us</h2>
